[package]

name = "iron-test"
version = "0.6.0"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
description = "Mocking suite for Iron requests."
repository = "https://github.com/iron/iron-test"
documentation = "https://docs.rs/iron-test"
license = "MIT"

[dependencies]
hyper = "0.10"
iron = ">= 0.5, <0.7"
log = "0.3"
url = "1.1"
uuid = { version = "0.2", features = ["v4"] }

[dev-dependencies]
mime = "0.2"
router = ">= 0.5, <0.7"
urlencoded = ">= 0.5, <0.7"
